# VoiceesGem

./: .env.example  .gitignore  LICENSE  README.md  get_google_token.py  pyproject.toml  server.py
bot/: bot.py
bot/prompts/: real_estate_receptionist_prompt.md  receptionist_system_prompt.md
bot/tools/: __init__.py  calendar_tools.py  google_auth.py  mail_tools.py  sheets_tools.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: CostTracker.tsx
